--- a/TestSpringBoot/src/main/resources/application.properties
+++ b/TestSpringBoot/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.username=root
 spring.datasource.password=
 
 server.error.whitelabel.enabled=false
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
